<resources>
    <string name="app_name">SocialMobileTest - Client</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="great_to_see_you">Great to see you again!</string>
    <string name="last_name">Last Name</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="hello_there">Hello There.</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome Back</string>

    <!-- Messages -->
    <string name="login_request_init">Login request initiated. Please launch the server app to check status</string>
    <string name="server_disconnected">Login Service has disconnected</string>
    <string name="username_invalid_msg">Invalid Username</string>
    <string name="password_invalid_msg">Invalid Password</string>
</resources>