<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xsmall"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/hello_there"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_large"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/login_to_continue"
            android:textColor="@color/grey_dark" />

        <com.google.android.material.textfield.TextInputLayout style="@style/AppTheme.LoginForm.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_username"
                style="@style/AppTheme.LoginForm.TextInputEditText"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                tools:text="wajahatjawaid@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/AppTheme.LoginForm.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                style="@style/AppTheme.LoginForm.TextInputEditText"
                android:hint="@string/password"
                android:inputType="textPassword"
                tools:text="abc" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginBottom="@dimen/margin_large"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/forgot_password"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_semi_bold"
            android:text="@string/sign_in"
            android:textAllCaps="false" />
    </LinearLayout>
</layout>